--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "devDependencies": {
     "@types/node": "^18.11.10",
     "typescript": "^4.9.3"
+  },
+  "engines": {
+    "node": ">=18.4.2"
   }
 }
