--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AREA44/fancy-notes#readme",
   "dependencies": {
+    "@vercel/og": "^0.2.0",
     "next": "^13.2.3",
     "nextra": "^2.2.16",
     "nextra-theme-docs": "^2.2.16",
