update renovate config

--- a/renovate.json
+++ b/renovate.json
@@ -2,7 +2,29 @@
   "extends": ["config:base"],
   "dependencyDashboard": false,
   "labels": ["renovate"],
-  "automerge": true,
-  "rangeStrategy": "bump",
-  "schedule": ["before 3am on Monday"]
+  "automerge": false,
+  "schedule": ["before 3am on Monday"],
+  "packageRules": [
+    {
+      "groupName": "nextra",
+      "labels": ["nextra"],
+      "matchPackageNames": ["nextra"],
+      "matchPackagePatterns": ["^nextra"],
+      "automerge": false
+    },
+    {
+      "groupName": "typescript",
+      "labels": ["typescript"],
+      "matchPackageNames": ["typescript"],
+      "matchPackagePatterns": ["^@types"],
+      "automerge": true
+    },
+    {
+      "groupName": "formatting & linting",
+      "labels": ["linting"],
+      "matchPackageNames": ["eslint", "prettier"],
+      "matchPackagePatterns": ["^eslint"],
+      "automerge": true
+    }
+  ]
 }
