--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier -w ."
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,6 @@
     "@types/node": "^18.14.6",
     "prettier": "2.8.6",
     "typescript": "^5.0.0"
-  }
+  },
+  "packageManager": "pnpm@7.30.3"
 }
