--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@area44/fancy-notes",
-  "version": "23.03.28",
+  "version": "23.5.17",
   "description": "Fany notes about all kinds of interesting topics",
   "scripts": {
     "dev": "next dev",
@@ -19,17 +19,19 @@
   },
   "homepage": "https://github.com/AREA44/fancy-notes#readme",
   "dependencies": {
-    "@vercel/og": "^0.5.0",
-    "next": "^13.2.4",
-    "nextra": "^2.2.19",
-    "nextra-theme-docs": "^2.2.19",
+    "@vercel/og": "^0.5.4",
+    "next": "^13.4.2",
+    "nextra": "^2.5.2",
+    "nextra-theme-docs": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^18.14.6",
+    "@types/node": "^20.1.4",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "prettier": "2.8.8",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.4"
   },
-  "packageManager": "pnpm@8.5.0"
+  "packageManager": "pnpm@8.5.1"
 }
