--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "extends": ["config:base"],
-  "dependencyDashboard": false,
+  "dependencyDashboard": true,
   "labels": ["renovate"],
   "automerge": false,
   "schedule": ["before 3am on Monday"],
