--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
-  "extends": ["config:base", ":dependencyDashboardApproval"],
+  "extends": ["config:base"],
   "dependencyDashboard": true,
   "labels": ["renovate"],
-  "automerge": true
+  "automerge": true,
+  "schedule": ["before 4am on Monday"]
 }
