chore: update dependencies

--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
   "name": "@area44/fancy-notes",
-  "version": "23.7.31",
+  "version": "23.8.18",
   "description": "Fany notes about all kinds of interesting topics",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "format": "prettier -w . --cache"
+  "homepage": "https://github.com/AREA44/fancy-notes#readme",
+  "bugs": {
+    "url": "https://github.com/AREA44/fancy-notes/issues"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AREA44/fancy-notes.git"
   },
-  "author": "AREA44",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/AREA44/fancy-notes/issues"
+  "author": "AREA44",
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "format": "prettier -w . --cache",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "start": "next start"
   },
-  "homepage": "https://github.com/AREA44/fancy-notes#readme",
   "dependencies": {
-    "@vercel/og": "^0.5.4",
-    "next": "^13.4.12",
-    "nextra": "^2.10.0",
-    "nextra-theme-docs": "^2.10.0",
+    "@vercel/og": "^0.5.11",
+    "next": "^13.4.17",
+    "nextra": "^2.11.0",
+    "nextra-theme-docs": "^2.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/node": "^20.1.4",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "eslint": "^8.45.0",
-    "eslint-config-next": "^13.4.12",
+    "@types/node": "^20.5.0",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.47.0",
+    "eslint-config-next": "^13.4.17",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-react": "^7.33.0",
-    "prettier": "^3.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "^3.0.2",
     "typescript": "^5.1.6"
   },
   "packageManager": "pnpm@8.6.12"
