--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "dependencies": {
     "@vercel/og": "^0.5.13",
-    "next": "^13.4.19",
-    "nextra": "^2.12.3",
-    "nextra-theme-docs": "^2.12.3",
+    "autoprefixer": "^10.4.16",
+    "next": "^13.5.3",
+    "nextra": "^2.13.1",
+    "nextra-theme-docs": "^2.13.1",
+    "postcss": "^8.4.30",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@types/node": "^20.6.2",
@@ -37,6 +40,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "typescript": "^5.2.2"
   },
   "packageManager": "pnpm@8.7.6"
