--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@area44/fancy-notes",
-  "version": "23.9.14",
-  "description": "Fany notes about all kinds of interesting topics",
+  "version": "23.9.30",
+  "description": "Fancy notes about all kinds of interesting topics",
   "homepage": "https://github.com/AREA44/fancy-notes#readme",
   "bugs": {
     "url": "https://github.com/AREA44/fancy-notes/issues"
