--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@area44/fancy-notes",
-  "version": "24.4.5",
+  "version": "25.02.06",
   "description": "All kinds of interesting topics",
   "homepage": "https://github.com/AREA44/fancy-notes#readme",
   "bugs": {
@@ -14,33 +14,26 @@
   "author": "AREA44",
   "scripts": {
     "build": "next build",
-    "dev": "next dev",
-    "format": "prettier -w . --cache",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "start": "next start"
+    "dev": "next --turbopack",
+    "start": "next start",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "@vercel/og": "^0.6.5",
-    "autoprefixer": "^10.4.20",
     "next": "^15.1.6",
-    "nextra": "^3.3.1",
-    "nextra-theme-docs": "^3.3.1",
+    "nextra": "^4.2.3",
+    "nextra-theme-docs": "^4.2.3",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@types/node": "^22.13.0",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
-    "eslint": "^9.19.0",
-    "eslint-config-next": "^15.1.6",
-    "eslint-config-prettier": "^10.0.1",
-    "eslint-plugin-react": "^7.37.4",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.7.3"
-  }
+  },
+  "packageManager": "pnpm@10.2.0"
 }
