--- a/package.json
+++ b/package.json
@@ -23,10 +23,8 @@
     "next": "^15.1.6",
     "nextra": "^4.2.3",
     "nextra-theme-docs": "^4.2.3",
-    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "tailwindcss": "^4.0.3"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
