--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@area44/fancy-notes",
   "version": "25.02.06",
+  "type": "module",
   "description": "All kinds of interesting topics",
   "homepage": "https://github.com/AREA44/fancy-notes#readme",
   "bugs": {
