chore: add Tailwind CSS configuration and global styles

--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "format": "biome format --write ."
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.4",
     "@vercel/og": "^0.6.5",
     "next": "^15.1.6",
     "nextra": "^4.2.3",
     "nextra-theme-docs": "^4.2.3",
+    "postcss": "^8.5.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^4.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
