--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next": "^15.1.6",
     "nextra": "^4.2.3",
     "nextra-theme-docs": "^4.2.3",
+    "pagefind": "^1.3.0",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
