--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "next build",
     "dev": "next --turbopack",
     "start": "next start",
-    "postbuild": "pagefind --site .next/server/app --output-path out/_pagefind",
+    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "format": "biome format --write ."
   },
   "dependencies": {
