--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
+    "@area44/biome-config": "^2.0.1",
     "@biomejs/biome": "^2.0.0",
     "@types/node": "^22.15.31",
     "@types/react": "^19.1.8",
